test/bad/macro-no-return-table.fnl
(fn i-am-not-a-table [] "This won't work with import-macros" :oops)
